# life_expectancy

./: README.md  pyproject.toml
.github/workflows/: ci.yml
life_expectancy/: cleaning.py  cleaning_steps.ipynb
life_expectancy/tests/: test_cleaning.py
