[project]
name = "life_expectancy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
description = "First assignment of the Foundations Learning Path"
authors = [
    {name = "Matilde Saraiva<matilde.soares.saraiva@gmail.com>"}
]
dependencies = [
    "pandas<2.0.0",
    "ipykernel (>=6.29.5,<7.0.0)",
]

[project.optional-dependencies]
dev = ["pytest<8.0.0", "pylint<3.0.0", "pytest-cov<5.0.0", "toml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80

[tool.poetry]
name = "life_expectancy"
version = "0.1.0"
description = "First assignment of the Foundations Learning Path"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "<8.0.0"
pylint = "<3.0.0"
pytest-cov = "<5.0.0"
toml = "^0.10.2"
